Fix TypeScript error in jest.config.ts transform typing
- Added custom TransformConfig and JestTransform types
- Ensured compatibility with Next.js 15.3.3 and Jest 30

--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": [
       "es2022"
     ],
-    "declaration": true,
+    "declaration": false,
+    "outDir": "dist",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
