--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "outDir": "dist"
   },
   "exclude": ["node_modules"]
 }
