--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,8 @@ jobs:
         with:
           sarif_file: trivy-results-${{ matrix.test-type.name }}.sarif
       - name: Build (only on main - dry run for readiness)
-        if: github.ref == 'refs/heads/main' && (needs('changed-files').outputs.frontend-tests > 0 || needs('changed-files').outputs.backend-tests > 0)
+        #if: github.ref == 'refs/heads/main' && (needs('changed-files').outputs.frontend-tests > 0 || needs('changed-files').outputs.backend-tests > 0)
+        if: github.ref == 'refs/heads/main' && (needs.changed-files.outputs.frontend-tests == 'true' || needs.changed-files.outputs.backend-tests == 'true')
         run: |
           built_services=0
           for service in docker/*; do
