--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -5,32 +5,35 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs18.x
-  stage: ${opt:stage, 'dev'}
+  stage: ${opt:stage, 'prod'}
   region: ${opt:region, 'us-east-1'}
   memorySize: 512
   timeout: 30
   environment:
     NODE_ENV: ${self:provider.stage}
-    DATABASE_URL: ${ssm:/nerdwork/${self:provider.stage}/database-url}
-    JWT_SECRET: ${ssm:/nerdwork/${self:provider.stage}/jwt-secret}
-    S3_BUCKET_NAME: ${ssm:/nerdwork/${self:provider.stage}/s3-bucket-name}
+    STAGE: ${self:provider.stage}
+    REGION: ${self:provider.region}
   iam:
     role:
       statements:
+        - Effect: Allow
+          Action:
+            - ssm:GetParameter
+            - ssm:GetParameters
+          Resource: 
+            - "arn:aws:ssm:${self:provider.region}:*:parameter/nerdwork/${self:provider.stage}/*"
         - Effect: Allow
           Action:
             - s3:GetObject
             - s3:PutObject
             - s3:DeleteObject
           Resource: 
-            - "arn:aws:s3:::${ssm:/nerdwork/${self:provider.stage}/s3-bucket-name}/*"
+            - "arn:aws:s3:::nerdwork-assets-${self:provider.stage}/*"
         - Effect: Allow
           Action:
-            - rds-data:ExecuteStatement
-            - rds-data:BatchExecuteStatement
-            - rds-data:BeginTransaction
-            - rds-data:CommitTransaction
-            - rds-data:RollbackTransaction
+            - logs:CreateLogGroup
+            - logs:CreateLogStream
+            - logs:PutLogEvents
           Resource: "*"
 
 plugins:
@@ -38,15 +41,93 @@ plugins:
   - serverless-offline
 
 functions:
-  api:
-    handler: src/lambda.handler
+  # API Gateway Proxy
+  api-gateway:
+    handler: api-gateway/src/lambda.handler
     events:
       - http:
           path: /{proxy+}
           method: ANY
           cors: true
     environment:
-      STAGE: ${self:provider.stage}
+      SERVICE_TYPE: api-gateway
+
+  # Auth Service
+  auth-service:
+    handler: services/auth-service/src/lambda.handler
+    events:
+      - http:
+          path: /auth/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: auth-service
+
+  # User Service  
+  user-service:
+    handler: services/user-service/src/lambda.handler
+    events:
+      - http:
+          path: /users/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: user-service
+
+  # Comic Service
+  comic-service:
+    handler: services/comic-service/src/lambda.handler
+    events:
+      - http:
+          path: /comics/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: comic-service
+
+  # Wallet Service
+  wallet-service:
+    handler: services/wallet-service/src/lambda.handler
+    events:
+      - http:
+          path: /wallet/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: wallet-service
+
+  # Event Service
+  event-service:
+    handler: services/event-service/src/lambda.handler
+    events:
+      - http:
+          path: /events/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: event-service
+
+  # Ledger Service
+  ledger-service:
+    handler: services/ledger-service/src/lambda.handler
+    events:
+      - http:
+          path: /ledger/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: ledger-service
+
+  # File Service
+  file-service:
+    handler: services/file-service/src/lambda.handler
+    events:
+      - http:
+          path: /files/{proxy+}
+          method: ANY
+          cors: true
+    environment:
+      SERVICE_TYPE: file-service
 
 custom:
   serverless-offline:
