--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: nodejs18.x
   stage: ${opt:stage, 'prod'}
-  region: ${opt:region, 'us-east-1'}
+  region: ${opt:region, 'eu-west-1'}
   memorySize: 512
   timeout: 30
   environment:
@@ -37,13 +37,18 @@ provider:
           Resource: "*"
 
 plugins:
-  - serverless-plugin-typescript
   - serverless-offline
 
 functions:
   # API Gateway Proxy
   api-gateway:
-    handler: api-gateway/src/lambda.handler
+    handler: api-gateway/dist/lambda.handler
+    package:
+      patterns:
+        - 'api-gateway/dist/**'
+        - 'api-gateway/package.json'
+        - '!api-gateway/src/**'
+        - '!api-gateway/node_modules/**'
     events:
       - http:
           path: /{proxy+}
@@ -54,7 +59,7 @@ functions:
 
   # Auth Service
   auth-service:
-    handler: services/auth-service/src/lambda.handler
+    handler: services/auth-service/dist/lambda.handler
     events:
       - http:
           path: /auth/{proxy+}
@@ -65,7 +70,7 @@ functions:
 
   # User Service  
   user-service:
-    handler: services/user-service/src/lambda.handler
+    handler: services/user-service/dist/lambda.handler
     events:
       - http:
           path: /users/{proxy+}
@@ -76,7 +81,7 @@ functions:
 
   # Comic Service
   comic-service:
-    handler: services/comic-service/src/lambda.handler
+    handler: services/comic-service/dist/lambda.handler
     events:
       - http:
           path: /comics/{proxy+}
@@ -87,7 +92,7 @@ functions:
 
   # Wallet Service
   wallet-service:
-    handler: services/wallet-service/src/lambda.handler
+    handler: services/wallet-service/dist/lambda.handler
     events:
       - http:
           path: /wallet/{proxy+}
@@ -98,7 +103,7 @@ functions:
 
   # Event Service
   event-service:
-    handler: services/event-service/src/lambda.handler
+    handler: services/event-service/dist/lambda.handler
     events:
       - http:
           path: /events/{proxy+}
@@ -109,7 +114,7 @@ functions:
 
   # Ledger Service
   ledger-service:
-    handler: services/ledger-service/src/lambda.handler
+    handler: services/ledger-service/dist/lambda.handler
     events:
       - http:
           path: /ledger/{proxy+}
@@ -120,7 +125,7 @@ functions:
 
   # File Service
   file-service:
-    handler: services/file-service/src/lambda.handler
+    handler: services/file-service/dist/lambda.handler
     events:
       - http:
           path: /files/{proxy+}
@@ -129,9 +134,23 @@ functions:
     environment:
       SERVICE_TYPE: file-service
 
+package:
+  patterns:
+    - 'services/*/dist/**'
+    - 'api-gateway/dist/**'
+    - '!services/*/src/**'
+    - '!services/*/node_modules/**'
+    - '!api-gateway/src/**'
+    - '!api-gateway/node_modules/**'
+    - '!node_modules/**'
+    - '!.serverless/**'
+    - '!**/*.test.ts'
+    - '!**/*.spec.ts'
+    - '!**/test/**'
+    - '!**/tests/**'
+    - '!**/.git/**'
+
 custom:
   serverless-offline:
     httpPort: 3000
     noPrependStageInUrl: true
-  typescript:
-    tsConfigFile: tsconfig.json
