--- a/backend/services/comic-service/serverless.yml
+++ b/backend/services/comic-service/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: nodejs18.x
   stage: ${opt:stage, 'dev'}
-  region: ${opt:region, 'us-east-1'}
+  region: ${opt:region, 'eu-west-1'}
   memorySize: 512
   timeout: 30
   environment:
