--- a/apps/web/nerdwork-plus/Dockerfile
+++ b/apps/web/nerdwork-plus/Dockerfile
@@ -1,10 +1,12 @@
 # Stage 1: Builder
 FROM node:18-alpine AS builder
 
+WORKDIR /app
+
+RUN npm install -g pnpm
+
 # Enable corepack (so pnpm works)
 RUN corepack enable
-
-WORKDIR /app
 
 # Copy only package manager files first
 COPY package.json pnpm-lock.yaml ./
@@ -17,19 +19,22 @@ COPY . .
 
 # Move into your app folder and build
 WORKDIR /app/apps/web/nerdwork-plus
-RUN pnpm build
+RUN pnpm run build
 
 
-# Stage 2: Runner
-FROM node:18-alpine AS runner
+# Stage 2: production
+FROM node:18-alpine AS production
 
 WORKDIR /app
+
+# Enable corepack (so pnpm works)
+RUN corepack enable
 
 # Copy only what we need from builder
 COPY --from=builder /app/apps/web/nerdwork-plus/.next ./.next
 COPY --from=builder /app/apps/web/nerdwork-plus/public ./public
 COPY --from=builder /app/apps/web/nerdwork-plus/package.json ./package.json
-COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/apps/web/nerdwork-plus/node_modules ./node_modules
 
 EXPOSE 3000
 
