--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # .env
 DATABASE_URL=
-API_KEY=
+API_KEY=..UgBQbUfld8dkQ0rvgjZfvg9odcnKWUq_lBqlxxlKWP8NaLmAid2-oPWGvwE.oZ
+HELIO_API_KEY=..UgBQbUfld8dkQ0rvgjZfvg9odcnKWUq_lBqlxxlKWP8NaLmAid2-oPWGvwE.oZ
