--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:yFZDzOJExjUXZDVsObbGBlziizkKIWzU@switchyard.proxy.rlwy.net:20342/railway
+DATABASE_URL=postgresql://user:g8c8rVNg5jML945BJGbdxm5vWOP9Hto6@dpg-d2rum4er433s738ci1b0-a.oregon-postgres.render.com/nerd_work?sslmode=require
 JWT_SECRET=cmusencwyenumieu8w7634378urnscudysuyiudimcjwugrftyuyzdiunch
 
 
@@ -8,5 +8,4 @@ HELIO_PUBLIC_KEY=
 HELIO_BASE_URL_DEV=https://api.dev.hel.io/v1
 HELIO_API_KEY=
 WEBHOOK_REDIRECT_URL=http://localhost:3000/api/webhook
-DATABASE_URL=postgresql://postgres:qnkyLZAPbqszVqXwnyXDXyqATGBWNRBt@switchback.proxy.rlwy.net:53448/railway
 JWT_SECRET=dknvoisrulniusnru9w843f873948wfhcnouerouiso8347fh98uwcnw984
