--- a/apps/web/nerdwork-plus/package.json
+++ b/apps/web/nerdwork-plus/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint . --ext .ts,+.tsx",
     "test": "jest",
     "test:watch": "jest --watch"
   },
