--- a/backend/package.json
+++ b/backend/package.json
@@ -2,32 +2,24 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "npx tsx --env-file=.env.local --watch  src/index.ts",
+    "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc",
-    "start:prod": "npm run build && node dist/src/index.js",
-    "deploy": "npx serverless deploy",
-    "deploy:prod": "npx serverless deploy --stage production",
-    "deploy:dev": "npx serverless deploy --stage dev --verbose",
+    "start": "tsx src/index.ts",
     "test": "jest",
     "generate:dev": "drizzle-kit generate --config=./src/config/drizzle-dev.config.ts",
-    "migrate:dev": "drizzle-kit generate --config=./src/config/drizzle-dev.config.ts",
-    "push:dev": "drizzle-kit push --config=./src/config/drizzle-dev.config.ts",
-    "deploy:lambda": "serverless deploy",
-    "deploy:lambda:prod": "serverless deploy --stage production",
-    "install:all": "npm run install:services && npm run install:tests",
-    "install:services": "cd services/auth-service && npm install && cd ../user-service && npm install && cd ../comic-service && npm install && cd ../wallet-service && npm install && cd ../event-service && npm install && cd ../ledger-service && npm install && cd ../file-service && npm install && cd ../..",
-    "install:tests": "cd tests && npm install && cd ..",
-    "install:root": "npm install"
+    "migrate:dev": "drizzle-kit migrate --config=./src/config/drizzle-dev.config.ts",
+    "push:dev": "drizzle-kit push --config=./src/config/drizzle-dev.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.882.0",
-    "@aws-sdk/lib-storage": "^3.882.0",
-    "@aws-sdk/s3-request-presigner": "^3.882.0",
+    "@aws-sdk/client-s3": "^3.883.0",
+    "@aws-sdk/cloudfront-signer": "^3.873.0",
+    "@aws-sdk/s3-request-presigner": "^3.883.0",
     "@heliofi/sdk": "^2.2.5",
     "@metaplex-foundation/mpl-core": "^1.4.1",
     "@metaplex-foundation/umi": "^1.2.0",
@@ -42,10 +34,10 @@
     "@types/morgan": "^1.9.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -57,10 +49,9 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "serverless-http": "^3.2.0",
+    "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
@@ -75,13 +66,12 @@
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
     "babel-jest": "^30.0.2",
-    "drizzle-kit": "^0.31.3",
+    "dotenv-cli": "^10.0.0",
+    "drizzle-kit": "^0.31.1",
     "jest": "^30.0.2",
-    "serverless": "^3.40.0",
-    "serverless-offline": "^13.3.3",
-    "serverless-plugin-typescript": "^2.1.5",
     "supertest": "^7.1.1",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.0",
+    "tsx": "^4.20.5"
   },
   "transform": {
     "\\.[jt]sx?$": [
