--- a/apps/web/nerdwork-plus/package.json
+++ b/apps/web/nerdwork-plus/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:frontend": "jest"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
