--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,12 @@
     },
     "dev": {
       "cache": false
+    },
+    "lint": {
+      "outputs": []
+    },
+    "test": {
+      "outputs": ["coverage/**"]
     }
   }
 }
