--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,42 @@
-name: CI - Lint, Test, and Build
+name: CI - Build and Test
 
 permissions:
   contents: write
   issues: write
-  security-events: write  # For SARIF upload
+  security-events: write  # Required for SARIF upload
 
 on:
   push:
-    branches: ['**']  # Run on all branches
+    branches: ['**']  # Run on push to all branches
   pull_request:
-    branches: [main]  # Run on PRs to main
+    branches: [main]  # Run on PRs to dev or main
 
 jobs:
   changed-files:
     runs-on: ubuntu-latest
     outputs:
-      changed-packages: ${{ steps.changes.outputs.packages }}
+      frontend-tests: ${{ steps.check-files.outputs.frontend }}
+      backend-tests: ${{ steps.check-files.outputs.backend }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Full history for diff
-      - name: Detect changed packages
-        id: changes
+      - name: Check changed files
+        id: check-files
         run: |
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            BASE_REF="${{ github.base_ref }}"
-            DIFF_CMD="git diff --name-only origin/$BASE_REF...HEAD"
-          else
-            DIFF_CMD="git diff --name-only HEAD^ HEAD"
-          fi
-          # Fallback for initial commit
-          CHANGED=$($DIFF_CMD 2>/dev/null | grep -E '^(apps/|services/)' | cut -d'/' -f1,2 | sort -u | tr '\n' ' ')
-          if [ -z "$CHANGED" ]; then
-            CHANGED="all"
-          fi
-          echo "packages=$CHANGED" >> $GITHUB_OUTPUT
-          echo "Detected changed packages: $CHANGED"
+          echo "frontend=$(git diff --name-only HEAD^ HEAD | grep -E 'apps/.*\.(ts|tsx)$' | wc -l | xargs)" >> $GITHUB_OUTPUT
+          echo "backend=$(git diff --name-only HEAD^ HEAD | grep -E 'backend/.*\.(ts|js)$' | wc -l | xargs)" >> $GITHUB_OUTPUT
 
-  lint-test-build:
+  build-and-test:
     runs-on: ubuntu-latest
     needs: changed-files
     strategy:
       matrix:
-        package:
-          - { name: 'apps/web/nerdwork-plus', type: 'frontend' }  # Frontend
-          - { name: 'backend/services/auth', type: 'backend' }
-          - { name: 'backend/services/user', type: 'backend' }
-          - { name: 'backend/services/comic', type: 'backend' }
-          - { name: 'backend/services/file', type: 'backend' }
-          - { name: 'backend/services/wallet', type: 'backend' }
-          - { name: 'backend/services/payment', type: 'backend' }
-          - { name: 'backend/services/loyalty', type: 'backend' }
-          - { name: 'backend/services/nft', type: 'backend' }
-          - { name: 'backend/services/notification', type: 'backend' }
-          - { name: 'backend/services/analytics', type: 'backend' }
+        test-type:
+          - { name: frontend-tests, path: 'apps/**', command: 'test' }
+          - { name: backend-tests, path: 'backend/**', command: 'test' }
     steps:
       - uses: actions/checkout@v4
       - name: Setup pnpm
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v2
         with:
           version: 8
           cache: 'pnpm'
@@ -68,72 +47,53 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
-      - name: Run tasks with turbo
-        if: needs.changed-files.outputs.changed-packages == 'all' || contains(needs.changed-files.outputs.changed-packages, matrix.package.name)
-        working-directory: ${{ matrix.package.name }}
+      - name: Run ${{ matrix.test-type.name }}
+        if: needs('changed-files').outputs.${{ matrix.test-type.name }} > 0
         run: |
-          pnpm turbo run lint test build --filter=./...  # Runs only for changed packages
-      - name: Upload test coverage
-        if: always() && (needs.changed-files.outputs.changed-packages == 'all' || contains(needs.changed-files.outputs.changed-packages, matrix.package.name))
+          if [ -f "tsconfig.${{ matrix.test-type.name }}.json" ]; then
+            pnpm ${{ matrix.test-type.command }} --config tsconfig.${{ matrix.test-type.name }}.json
+          else
+            pnpm ${{ matrix.test-type.command }}
+          fi
+      - name: Upload test coverage (optional - for analytics)
+        if: always() && needs('changed-files').outputs.${{ matrix.test-type.name }} > 0
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ${{ matrix.package.name }}/coverage/lcov.info  # Adjust per package
-          fail_ci_if_error: false
-
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: lint-test-build
-    if: always() && needs.lint-test-build.result == 'success'
-    strategy:
-      matrix:
-        package:
-          - { name: 'apps/web/nerdwork-plus', type: 'frontend' }
-          - { name: 'backend/services/auth', type: 'backend' }
-          - { name: 'backend/services/user', type: 'backend' }
-          - { name: 'backend/services/comic', type: 'backend' }
-          - { name: 'backend/services/file', type: 'backend' }
-          - { name: 'backend/services/wallet', type: 'backend' }
-          - { name: 'backend/services/payment', type: 'backend' }
-          - { name: 'backend/services/loyalty', type: 'backend' }
-          - { name: 'backend/services/nft', type: 'backend' }
-          - { name: 'backend/services/notification', type: 'backend' }
-          - { name: 'backend/services/analytics', type: 'backend' }
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-          cache: 'pnpm'
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'pnpm'
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-      - name: Scan for vulnerabilities
-        uses: aquasecurity/trivy-action@master
+          token: ${{ secrets.CODECOV_TOKEN }}  # Add in repo secrets
+          files: ./coverage/lcov.info  # Adjust if path differs
+      - name: Dependency vulnerability scanning (optional - for security)
+        if: always() && needs('changed-files').outputs.${{ matrix.test-type.name }} > 0
+        uses: aquasecurity/trivy-action@0.18.0  # Use stable version
         with:
           scan-type: 'fs'
-          scan-ref: ${{ matrix.package.name }}
           format: 'sarif'
-          output: 'trivy-results-${{ matrix.package.type }}.sarif'
-          severity: 'CRITICAL,HIGH'
-      - name: Upload SARIF results
-        if: always()
+          output: 'trivy-results-${{ matrix.test-type.name }}.sarif'
+      - name: Debug - Verify SARIF file
+        if: always() && needs('changed-files').outputs.${{ matrix.test-type.name }} > 0
+        run: |
+          ls -la trivy-results-${{ matrix.test-type.name }}.sarif || echo "SARIF file not found for ${{ matrix.test-type.name }}"
+      - name: Upload scan results to GitHub
+        if: always() && needs('changed-files').outputs.${{ matrix.test-type.name }} > 0
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: trivy-results-${{ matrix.package.type }}.sarif
-
-  notify-failure:
-    runs-on: ubuntu-latest
-    needs: [lint-test-build, security-scan]
-    if: failure()
-    steps:
+          sarif_file: trivy-results-${{ matrix.test-type.name }}.sarif
+      - name: Build (only on main - dry run for readiness)
+        if: github.ref == 'refs/heads/main' && (needs.changed-files.outputs.frontend-tests > 0 || needs.changed-files.outputs.backend-tests > 0)
+        run: |
+          built_services=0
+          for service in docker/*; do
+            if [ -f "$service/Dockerfile" ]; then
+              docker build --no-cache -t nerdwork-$service:test $service
+              ((built_services++))
+            fi
+          done
+          if [ "$built_services" -eq 0 ]; then
+            echo "❌ No services built. Check Dockerfile paths."
+            exit 1
+          fi
+          echo "✅ Build successful - $built_services services ready for deployment"
       - name: Notify failure on PR (GitHub comment)
-        if: github.event_name == 'pull_request'
+        if: failure() && github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -142,10 +102,10 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '⚠️ CI failed for ${{ matrix.package.name }} on ${{ github.ref }}! @${{ github.actor }}, please fix errors. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+              body: '⚠️ CI failed on ${{ matrix.test-type.name }} for ${{ github.ref }}! @${{ github.actor }}, please fix errors. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
             })
-      - name: Notify failure on push (GitHub issue)
-        if: github.event_name == 'push'
+      - name: Notify failure on non-PR push (GitHub issue)
+        if: failure() && github.event_name == 'push'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -154,18 +114,18 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: 'CI Failure on ${{ github.ref }} - Commit ${{ github.sha }}',
-              body: '⚠️ CI failed for ${{ matrix.package.name }}! @${{ github.actor }}, please fix. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}',
+              body: '⚠️ CI failed on ${{ matrix.test-type.name }}! @${{ github.actor }}, please fix. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}',
               assignees: ['${{ github.actor }}']
             })
       - name: Notify commit author on failure (push)
-        if: github.event_name == 'push'
+        if: failure() && github.event_name == 'push'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.rest.repos.createCommitComment({
+            await github.rest.repos.createCommitComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               commit_sha: context.sha,
-              body: `@${{ github.actor }} CI failed for ${{ matrix.package.name }}. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`
+              body: `@${{ github.actor }} CI failed on this commit (${{ matrix.test-type.name }}). Please check the logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`
             })
