update the deployment to production needing staging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -334,7 +334,7 @@ jobs:
 
   deploy-to-production:
     name: Deploy to Production
-    needs: [deploy-to-test]
+    needs: [deploy-to-staging]
     if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
