--- a/apps/web/nerdwork-plus/package.json
+++ b/apps/web/nerdwork-plus/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:frontend": "jest"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -30,6 +29,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@solflare-wallet/sdk": "^1.4.2",
     "@tanstack/react-query": "^5.85.9",
     "@tanstack/react-table": "^8.21.3",
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
