--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,8 +297,7 @@ jobs:
           set +a
 
           # Update ECS services or other deployment steps
-          # Example:
-          aws ecs update-service --cluster staging-cluster --service nerdwork-api --force-new-deployment --region eu-west-1
+          # Example: aws ecs update-service --cluster staging-cluster --service nerdwork-api --force-new-deployment --region eu-west-1
 
           echo "✅ Deployment to staging environment completed"
 
@@ -424,7 +423,8 @@ jobs:
           set +a
 
           # Update ECS services or other deployment steps
-          # Example: aws ecs update-service --cluster prod-cluster --service nerdwork-api --force-new-deployment
+          # Example:
+          aws ecs update-service --cluster prod-cluster --service nerdwork-api --force-new-deployment
 
           echo "✅ Deployment to production environment completed"
 
