--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -336,7 +336,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.rest.issues.createComment({
+            github.rest.issues.create({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
